--- a/prac.cfg
+++ b/prac.cfg
@@ -28,14 +28,20 @@ mp_restartgame 1
 // Binds
 bind - noclip
 bind = “give weapon_hegrenade;give weapon_flashbang;give weapon_smokegrenade;give weapon_incgrenade;give weapon_molotov;give weapon_decoy”
+bind 0 cl_righthand 0
+bind 9 cl_righthand 1
+bind 7 +attack
+bind 8 +attack2
 
-//This turns on the greenscreen
-bind [ "fog_override "1"; fog_maxdensity "1500"; fog_color "0 255 0"; fog_start "0"; fog_end "1"" 
-
-//This turns it off
-bind ] "fog_override "1"; fog_maxdensity "1500"; fog_color "0 255 0"; fog_start "1"; fog_end "0""
+echo Greenscreen ON
+echo "fog_override "1"; fog_maxdensity "1500"; fog_color "0 255 0"; fog_start "0"; fog_end "1"" 
+echo
+ehho Greenscreen OFF
+echo "fog_override "1"; fog_maxdensity "1500"; fog_color "0 255 0"; fog_start "1"; fog_end "0""
 
 // Other needed commands
-//host_timescale 0.0000001 
-//host_timescale 1 //This puts time back to default
-//r_drawviewmodel 0
+echo host_timescale 0.0000001 
+echo host_timescale 0.02
+echo host_timescale 1 //default
+
+echo r_drawviewmodel 0
