--- a/prac.cfg
+++ b/prac.cfg
@@ -45,3 +45,4 @@ echo host_timescale 0.02
 echo host_timescale 1 //default
 
 echo r_drawviewmodel 0
+echo cl_draw_only_deathnotices 1 to remove hud and leave xhair
